--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "joi": "^17.10.1",
     "mongoose": "^7.5.0",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
